--- a/index.html
+++ b/index.html
@@ -8,19 +8,16 @@
     <link rel="icon" href="img/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/style.css" />
-    <title>Leticia - Links</title>
+    <title>Tadeu Barbosa - Links</title>
   </head>
   <body>
     <main class="container">
       <header class="header">
         <img class="header__img" src="img/perfil.jpg" alt="" />
-        <h1 class="header__title">Leticia</h1>
-        <h2 class="header__subtitle">'levxyca'</h2>
+        <h1 class="header__title">Tadeu Barbosa</h1>
+        <h2 class="header__subtitle">'tadeubdev'</h2>
         <p class="header__description">
-          Leticia, conhecida como 'levxyca' na internet, tem hobbies demais, é
-          introvertida, conversa sobre tech e aleatoriedades e registra sua
-          jornada pelas redes sociais ✨ (ela/dela) ‎‍💻 dev newbie front-end 🎥
-          criadora de conteúdo e streamer 🌸 co-fundadora da @feminis_tech
+          Amante de tecnologia e programação, apaixonado por desenvolvimento web.
         </p>
       </header>
       <section class="links">
@@ -28,16 +25,16 @@
           <li class="links__menu-item">
             <a
               class="links__menu-item-a"
-              href="https://levxyca.com"
+              href="https://github.com/tadeubdev"
               target="_blank"
               rel="noopener"
-              >Acesse meu site</a
+              >Meu github</a
             >
           </li>
           <li class="links__menu-item">
             <a
               class="links__menu-item-a"
-              href="https://dev.to/levxyca"
+              href="https://dev.to/tadeubdev"
               target="_blank"
               rel="noopener"
               >Leia meus posts</a
@@ -46,28 +43,19 @@
           <li class="links__menu-item">
             <a
               class="links__menu-item-a"
-              href="https://www.twitch.tv/levxyca"
+              href="https://www.youtube.com/channel/UCoWGXxTRd_khRTsGxpxcV8w"
               target="_blank"
               rel="noopener"
-              >Conheça meu canal de live coding</a
+              >Conheça meu canal no youtube</a
             >
           </li>
           <li class="links__menu-item">
             <a
               class="links__menu-item-a"
-              href="https://anchor.fm/mocasdaweb"
+              href="https://alura.com.br/stars"
               target="_blank"
               rel="noopener"
-              >Ouça o podcast Moças da Web</a
-            >
-          </li>
-          <li class="links__menu-item">
-            <a
-              class="links__menu-item-a"
-              href="https://www.youtube.com/channel/UC0oAypdScDI9WiwvebIqiOQ"
-              target="_blank"
-              rel="noopener"
-              >Meu canal no youtube sobre TI</a
+              >Integrante do Alura Stars</a
             >
           </li>
         </ul>
@@ -77,7 +65,7 @@
           <li class="social__menu-item">
             <a
               class="social__menu-item-a"
-              href="https://www.youtube.com/channel/UC0oAypdScDI9WiwvebIqiOQ"
+              href="https://www.youtube.com/channel/UCoWGXxTRd_khRTsGxpxcV8w"
               target="_blank"
               rel="noopener"
               ><ion-icon name="logo-youtube"></ion-icon
@@ -86,7 +74,7 @@
           <li class="social__menu-item">
             <a
               class="social__menu-item-a"
-              href="https://github.com/levxyca"
+              href="https://github.com/tadeubdev"
               target="_blank"
               rel="noopener"
               ><ion-icon name="logo-github"></ion-icon
@@ -95,7 +83,7 @@
           <li class="social__menu-item">
             <a
               class="social__menu-item-a"
-              href="https://twitter.com/levxyca"
+              href="https://twitter.com/tadeubdev"
               target="_blank"
               rel="noopener"
               ><ion-icon name="logo-twitter"></ion-icon
@@ -104,16 +92,7 @@
           <li class="social__menu-item">
             <a
               class="social__menu-item-a"
-              href="https://www.twitch.tv/levxyca"
-              target="_blank"
-              rel="noopener"
-              ><ion-icon name="logo-twitch"></ion-icon
-            ></a>
-          </li>
-          <li class="social__menu-item">
-            <a
-              class="social__menu-item-a"
-              href="https://www.linkedin.com/in/leticiacaroline/"
+              href="https://www.linkedin.com/in/tadeubdev/"
               target="_blank"
               rel="noopener"
               ><ion-icon name="logo-linkedin"></ion-icon
@@ -122,7 +101,7 @@
           <li class="social__menu-item">
             <a
               class="social__menu-item-a"
-              href="https://www.instagram.com/levxyca/"
+              href="https://www.instagram.com/tadeubdev/"
               target="_blank"
               rel="noopener"
               ><ion-icon name="logo-instagram"></ion-icon
