feat: adiciona link do Thiago

--- a/index.html
+++ b/index.html
@@ -58,6 +58,15 @@
               >Integrante do Alura Stars</a
             >
           </li>
+          <li class="links__menu-item">
+            <a
+              class="links__menu-item-a"
+              href="https://github.com/thiagoa-martins"
+              target="_blank"
+              rel="noopener"
+              >Github do Thiago Martins</a
+            >
+          </li>
         </ul>
       </section>
       <section class="social">
