feat: add link do grupo wpp

--- a/index.html
+++ b/index.html
@@ -61,6 +61,15 @@
           <li class="links__menu-item">
             <a
               class="links__menu-item-a"
+              href="https://chat.whatsapp.com/Ks9B4E6tz04ErKb19oEdNn"
+              target="_blank"
+              rel="noopener"
+              >Grupo whatsapp</a
+            >
+          </li>
+          <li class="links__menu-item">
+            <a
+              class="links__menu-item-a"
               href="https://github.com/thiagoa-martins"
               target="_blank"
               rel="noopener"
